# est

./: .gitmodules  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
client/: package-lock.json  package.json
client/pages/: index.tsx
server/: .env  Cargo.toml  Dockerfile  docker-compose.yaml  sqlx-data.json  testing.txt
server/benches/: SampleEstimateLarge.csv  SampleEstimateSmall.csv  SampleItemsLarge.csv  my_benchmark.rs
server/migrations/: 20211206182251_create_projects_table.sql  20211206202433_insert_sample_projects.sql  20211213200215_init.sql  20220106054916_init.sql  20220127175731_insert_test_data.sql  20220127175731_insert_test_data.sql.txt  Operations.docx  SampleSQLDataGenerator.xlsx  TableDesign.xlsx  ~$TableDesign.xlsx
server/migrations/archive/: 20211206182251_create_projects_table.sql  20211213200052_init.sql
server/src/: config.rs  error.rs  lib.rs  main.rs  postgres.rs  projects.rs
server/src/estimating/: assembly.rs  assembly_item.rs  estimate.rs  estimate_assembly.rs  mod.rs  project.rs
server/src/graphql/: assembly.rs  assembly_item.rs  estimate.rs  estimate_assembly.rs  mod.rs  mutation_root.rs  project.rs  projects.rs  query_root.rs  schema.rs
server/src/graphql/loaders/: estimates.rs  mod.rs  projects.rs
server/src/http/: estimate_assembly.rs  graphql.rs  mod.rs  project.rs
server/src/http/assembly/: loader.rs  mod.rs  mutations.rs  queries.rs  resolver.rs
server/src/http/assembly/items/: loader.rs  resolver.rs
server/src/http/assembly_component/: loader.rs  mod.rs  resolver.rs
server/src/http/assembly_components/: loader.rs  mod.rs  resolver.rs
server/src/http/assembly_item/: loader.rs  mod.rs  resolver.rs
server/src/http/assembly_items/: loader.rs  resolver.rs
server/src/http/estimate/: loader.rs  mod.rs  mutations.rs  queries.rs  resolver.rs  resolvers.rs
server/src/http/estimate/assemblies/: loader.rs  resolver.rs
server/src/http/estimate_assemblies/: loader.rs  resolver.rs
server/src/http/estimate_assembly/: loader.rs  mod.rs  resolver.rs
server/src/http/estimate_group/: mod.rs  resolver.rs
server/src/http/estimate_groups/: loader.rs  mod.rs  resolver.rs
server/src/http/estimate_groups_item/: loader.rs  mod.rs  resolver.rs
server/src/http/estimate_line_item/: loader.rs  mod.rs  resolver.rs
server/src/http/item/: mod.rs
server/src/http/loaders/: assembly_items.rs  estimate_assemblies.rs  estimates.rs  mod.rs  projects.rs
server/src/http/product/: loader.rs  mod.rs  mutations.rs  resolver.rs
server/src/http/project/: loader.rs  mod.rs  mutations.rs  queries.rs  resolver.rs
server/src/http/testing/: mod.rs  queries.rs
server/src/postgres/: assembly.rs  estimate.rs  mod.rs  project.rs  projects.rs
server/tests/: assembly.rs  assembly_item.rs  assembly_items.rs  estimate.rs  estimate_assemblies.rs  estimate_assembly.rs  health_check.rs  project.rs  projects.rs
server/tests/common/: mod.rs
server2/: .env  Cargo.toml  docker-compose.yaml
server2/src/: configuration.rs  lib.rs  main.rs
